--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -436,8 +436,6 @@ h3{
             p{
                 margin: 0;
                 transition: opacity 0.5s;
-                border-left: 4px solid  #9595ff;
-                padding-left: 1rem;
                 margin-top: 24px;
             }
         }
@@ -452,33 +450,7 @@ h3{
                 margin-bottom: 32px;
                 
             }
-            button{
-                background-color: rgba(100, 100, 255, 0.5);
-
-                border: solid 1px;
-                border-color: #9595ff;
-                color: #9595ff;
-                font-size: 1.5rem;
-                border-radius:28px;
-                padding: 0.5rem;
-                padding-left: 1.5rem;
-                padding-right: 1.5rem;
-                cursor: pointer;
-                
-            }
-
-            button:hover{
-                opacity: 0.5;
-            }
-
-         
-             button:active {
-                transform: scale(0.95);
-            }
-            
-            .hidden {
-                visibility: hidden;
-            }
+           
             
             
         }
@@ -503,6 +475,26 @@ h3{
                     height: auto;
                     object-fit: cover;
                 }
+
+                button{
+                    width: 40%;
+                    padding: 1rem;
+                    border: solid 1px;
+                    border-color: #9595ff;
+                    border-radius: 50px;
+                    background-color: #5554F3;
+                    /* color: #9595ff; */
+                    color: white;
+                    font-family: 'Poppins', sans-serif;
+                    margin-top: 32px;
+                    font-size: medium;
+        
+                    @media (max-width: 900px){
+                        width: 100%;
+                        
+                    }
+                }
+                
 }
 
     
@@ -567,7 +559,7 @@ h3{
             margin: 0 5px; 
     
             img {
-                width: 100%;
+                width: 80px;
                 height: auto;
                 object-fit: cover;
                 margin-top: 24px;
@@ -609,7 +601,7 @@ h3{
         display: flex;
         flex-direction: column;
         align-items: center;
-
+        width: 100%;
 
        img{
               width: 100%;
@@ -625,6 +617,16 @@ h3{
 
 /*Sixth-section  */
 
+.sixth-section{
+
+        h1,h3{
+
+            align-items: center;
+            text-align: center;
+            justify-content: center;
+        }
+    
+}
 .form-input{
     display: grid;
     grid-template-columns: 1fr 1fr;
