--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -494,6 +494,11 @@ h3{
                         
                     }
                 }
+
+                button:hover{
+                    opacity: 0.5;
+                    cursor: pointer;
+                }
                 
 }
 
@@ -625,6 +630,14 @@ h3{
             text-align: center;
             justify-content: center;
         }
+
+        .TitleBold2{
+            font-family: "Poppins-Bold", sans-serif;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+        }
+
     
 }
 .form-input{
@@ -639,17 +652,17 @@ h3{
         width: 90%;
         padding: 1rem;
         border: none;
-        border-radius: 16px;
+        /* border-radius: 16px; */
         background-color: transparent;
-        border: solid 1px;
-        border-color: #9595ff;
+        border-bottom: solid 1px;
+        border-color: black;
         color: black;
         font-family: 'Poppins', sans-serif; 
         margin-top: 15px;
     }
 
     input::placeholder{
-        color: black;
+        color: gray;
         font-family: 'Poppins', sans-serif;    
     }
 
@@ -673,9 +686,10 @@ h3{
     input{
         width: 90%;
         padding: 3rem;
-        border:solid 1px;
-        border-color: #9595ff;
-        border-radius: 10px;
+        border:none;
+        border-bottom: solid 1px;
+        border-color: black;
+        /* border-radius: 10px; */
         background-color: transparent;
         font-family: 'Poppins', sans-serif;
         margin-top: 15px;
@@ -689,7 +703,7 @@ h3{
     }
 
     input::placeholder{
-        color: black;
+        color: gray;
         font-family: 'Poppins', sans-serif;    
     }
 
