--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -2,8 +2,16 @@ h1,h2,h3,h4,h5,h6{
     color: black;
     font-family: "Poppins", sans-serif;
 }           
-span{
-    color: #9595ff;
+.TitleBold, .TitleBold2{
+    font-family: "Poppins-Bold", sans-serif;
+    color:#5554F3;
+}
+
+.TitleBold3{
+    font-family: "Poppins-Bold", sans-serif;
+    span{
+        color: black
+    }
 }
 
 p{
@@ -25,7 +33,8 @@ h1{
     margin-top: 24px;
     margin-bottom: 0;
     @media (max-width: 900px){
-        font-size: 2rem;
+        font-size: 1rem;
+        width: 70%;
     }
 }
 h3{
@@ -151,10 +160,12 @@ h3{
             }
             .gif2{
                 position: relative;
+                margin-top: 4rem;
                 img{
                     width: 100%;
                     height: auto;
-                     object-fit: cover;       
+                     object-fit: cover;  
+                     margin-bottom: -110px     
                 }
 
                 .video{
@@ -186,7 +197,19 @@ h3{
         display: flex;
         justify-content: space-between;
         align-items: center;
-        width: 100%;
+        width:100%;
+        margin-top: 3rem;
+        .image-first-container{
+            width:50%;
+
+            img{
+                width: 100%;
+                margin-bottom: 0;
+                  @media (max-width: 900px){
+                      display: none;
+                  }
+            }
+        }
        
         @media (max-width: 900px){
             display: flex;
@@ -226,18 +249,23 @@ h3{
         .text{
             font-family: 'Poppins', sans-serif;
             color: black;
+            width: 50%;
+            @media screen and (max-width: 900px){
+                width: 100%;
+            }
         }
 
         .texto{
             display: flex;
             align-items: stretch; 
+            margin-top: 0;
            /*  margin-top: 10px; */
 
-            img{
+          /*   img{
                 width: 5px;
                 object-fit: cover;
                 margin-right: 3%; 
-            }
+            } */
             p{
                 margin: 0;
                 transition: opacity 0.5s;
@@ -317,14 +345,14 @@ h3{
                 width: 100%;
             }
             span{
-                color: #9595ff;
+                color: black;
             }
         }
 
         .texto{
             display: flex;
             align-items: center;
-            margin-top: 15px;
+            margin-top: 3rem;
 
             img{
                 width: 5px;
@@ -335,8 +363,6 @@ h3{
             p{
                 margin: 0;
                 transition: opacity 0.5s;
-                border-left: 4px solid  #9595ff;
-                padding-left: 1rem;
                 margin-top: 24px;
             }
 
@@ -406,6 +432,7 @@ h3{
         justify-content: space-between;
         align-items: center;
         width: 100%;
+        position: relative;
         @media (max-width: 900px) {
             display: block;
             
@@ -414,23 +441,76 @@ h3{
         .text{
             font-family: 'Poppins', sans-serif;
             color: black;
-            width: 60%;
+            width: 45%;
+            margin-left: 1.5rem;
+
             @media screen and (max-width: 900px){
                 width: 100%;
             }
-            span{
-                color: #9595ff;
+            
+        }
+
+        .division{
+            display: flex;
+            button{
+                width: 35%;
+            }
+        }
+
+        .completebutton{
+            button{
+                width: 100%;
+
+            }
+        }
+
+        .frame4{
+            top: 0;
+            width: 100;
+            height: auto;
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+
+        }
+        .botones{
+            button{
+                background-color: white;
+                color: #5554F3;
+                border: solid 1px;
+                border-color:#5554F3;
+                padding: 5px;
+                margin-left: 5px;
+                width: 100%;
+               
+            }
+            button:hover{
+                background-color:#5554F3;
+                color: white;
+            }
+
+            @media screen and (max-width: 900px){
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+                margin-top: 1rem;
+              button{
+                margin-left: 0;
+              }
+                
             }
         }
 
         .texto{
             display: flex;
             align-items: stretch;
-
+            
             img{
                 width: 5px;
                 object-fit: cover;
-                margin-right: 3%;   
+                /* margin-right: 3%;    */
             }
            
             p{
@@ -465,7 +545,8 @@ h3{
         
         
                 .image-section{
-                    width: 40%;
+                    width: 55%;
+                    
                     @media screen and (max-width: 900px){
                         width: 100%;
                     }
@@ -517,9 +598,7 @@ h3{
             font-family: 'Poppins', sans-serif;
             color: black;
     
-            span {
-                color: #9595ff;
-            }
+          
         }
     
         .texto{
@@ -713,7 +792,7 @@ h3{
         border: solid 1px;
         border-color: #9595ff;
         border-radius: 50px;
-        background-color: rgba(100, 100, 255, 0.5);
+        background-color:#5554F3;
         color: white;
             font-family: 'Poppins', sans-serif;
             margin-top: 35px;
