--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -5,7 +5,8 @@
 
   <header>
     <div class="section-header">
-      <img src="./assets/Icon/Layer_1.png" alt="" />
+      <img class="chatbetone" src="./assets/Icon/Layer_1.png" alt="" />
+      <img class="chatbet" src="../../../../assets/img/Frame0.png" alt="" />
       <div class="navbar">
         <a href="#funciones">{{ "headerone" | translate }}</a>
         <a href="#beneficios">{{ "headertwo" | translate }}</a>
@@ -62,6 +63,7 @@
     
     <div class="first-section-container">
       <div class="text">
+        <img src="../../../../assets/img/Frame8.png" alt="">
         <h1>{{ "subtitle" | translate }}</h1>
         <div class="texto">
           <ng-container *ngIf="currentLanguage === 'es'">
@@ -85,11 +87,13 @@
       </div>
 
       <div class="image-first-container">
-        <img
+        <img 
         src="../../../../assets/img/Frame1.png "
         alt=""
         style="margin-top: 0"
       />
+      <img class="lastimage" src="../../../../assets/img/Frame7.png" alt="">
+      
       
 
       </div>
@@ -220,9 +224,9 @@
   </div>
 </div>
 
-<div class="backgroundline">
+<!-- <div class="backgroundline">
   <img src="../../../../assets/Background/end-sect-one.png " alt="" />
-</div>
+</div> -->
 
 <div id="beneficios" class="section">
   <div class="third-section">
