--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -129,6 +129,15 @@ h3{
             justify-content: center;
             flex-direction: column;
             
+          .chatbetone{
+            display: none;
+          }
+        }
+
+        @media screen and (min-width: 900px){
+          .chatbet{
+            display: none;
+          }
         }
     }
 
@@ -252,13 +261,24 @@ h3{
         margin-top: 3rem;
         .image-first-container{
             width:50%;
-
+            position: relative;
+            
+            .lastimage{
+                position: absolute;
+                top: 0;
+                right: 0;
+                width: 35%;
+                height: auto;
+              }
             img{
                 width: 100%;
+                
                 margin-bottom: 0;
                   @media (max-width: 900px){
                       display: none;
                   }
+
+                 
             }
         }
        
@@ -303,8 +323,12 @@ h3{
             font-family: 'Poppins', sans-serif;
             color: black;
             width: 50%;
+            margin-top: 0;
             @media screen and (max-width: 900px){
                 width: 100%;
+                img{
+                    display: none;
+                }
             }
         }
 
@@ -702,51 +726,50 @@ h3{
     .image-carousel {
         display: flex;
         justify-content: space-between;
-        overflow: hidden; 
+        overflow: hidden;
         width: 100%;
-    
+      
         .carousel-item {
-            flex: 1;
+          flex: 1;
+          text-align: center;
+          padding: 10px;
+          margin: 0 5px;
+      
+          img {
+            width: 80px;
+            height: auto;
+            object-fit: cover;
+            margin-top: 24px;
+          }
+      
+          p {
+            color: black;
+            font-family: 'Poppins', sans-serif;
+            font-size: 1rem;
+            margin-top: 10px;
             text-align: center;
-            padding: 10px;
-            margin: 0 5px; 
-    
-            img {
-                width: 80px;
-                height: auto;
-                object-fit: cover;
-                margin-top: 24px;
-            }
-    
-            p {
-                color: black;
-                font-family: 'Poppins', sans-serif;
-                font-size: 1rem;
-                margin-top: 10px;
-                text-align: center;
-            }
+          }
         }
-    
+      
         @media (max-width: 900px) {
-            overflow-x: scroll; 
-            scroll-snap-type: x mandatory;
-            overflow-x: auto;
-
-            .image-carousel::-webkit-scrollbar {
-                display: none;
+          flex-direction: column; /* Cambia el layout a columna */
+          align-items: center;
+      
+          .carousel-item {
+            width: 100%; /* Asegura que las imágenes ocupen todo el ancho */
+            margin: 10px 0; /* Añade un poco de margen entre los items */
+      
+            img {
+              width: 60px; /* Ajusta el tamaño de las imágenes en modo teléfono */
             }
-            
-            .image-carousel {
-                -ms-overflow-style: none;
-                scrollbar-width: none;
-            }
-            .carousel-item {
-                flex: 0 0 auto;
-                scroll-snap-align: start;
-                width: 60%; 
-            }
+          }
+      
+          /* Elimina cualquier propiedad de scroll para carrusel */
+          overflow: visible;
+          scroll-snap-type: none;
         }
-    }
+      }
+      
     
   /* Fifth Section */
 
